--- a/library.yml
+++ b/library.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  postgres-master:
+  library-master:
     image: bitnami/postgresql-repmgr:latest
     environment:
       POSTGRESQL_POSTGRES_PASSWORD: BUGRIENKO_216
@@ -9,17 +9,17 @@ services:
       POSTGRESQL_PASSWORD: BUGRIENKO_216
       POSTGRESQL_DATABASE: BUGRIENKO_216
       REPMGR_PASSWORD: repmgrpassword
-      REPMGR_PRIMARY_HOST: postgres-master
-      REPMGR_PARTNER_NODES: postgres-master,postgres-slave
-      REPMGR_NODE_NAME: node-1
-      REPMGR_NODE_NETWORK_NAME: postgres-master
+      REPMGR_PRIMARY_HOST: library-master
+      REPMGR_PARTNER_NODES: library-master,library-slave
+      REPMGR_NODE_NAME: node-3
+      REPMGR_NODE_NETWORK_NAME: library-master
     ports:
       - "5432:5432"
     volumes:
-      - ./sql:/docker-entrypoint-initdb.d
-      - postgres_master_data:/bitnami/postgresql
+      - ./sql/library:/docker-entrypoint-initdb.d
+      - library_master_data:/bitnami/postgresql
 
-  postgres-slave:
+  library-slave:
     image: bitnami/postgresql-repmgr:latest
     environment:
       POSTGRESQL_POSTGRES_PASSWORD: adminpassword
@@ -27,19 +27,19 @@ services:
       POSTGRESQL_PASSWORD: custompassword
       POSTGRESQL_DATABASE: customdatabase
       REPMGR_PASSWORD: repmgrpassword
-      REPMGR_PRIMARY_HOST: postgres-master
-      REPMGR_PARTNER_NODES: postgres-master,postgres-slave
-      REPMGR_NODE_NAME: node-2
-      REPMGR_NODE_NETWORK_NAME: postgres-slave
+      REPMGR_PRIMARY_HOST: library-master
+      REPMGR_PARTNER_NODES: library-master,library-slave
+      REPMGR_NODE_NAME: node-4
+      REPMGR_NODE_NETWORK_NAME: library-slave
     ports:
       - "5433:5432"
     depends_on:
-      - postgres-master
+      - library-master
     volumes:
-      - postgres_slave_data:/bitnami/postgresql
+      - library_slave_data:/bitnami/postgresql
 
 volumes:
-  postgres_master_data:
+  library_master_data:
     driver: local
-  postgres_slave_data:
+  library_slave_data:
     driver: local
