--- a/trains.yml
+++ b/trains.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  postgres-master:
+  trains-master:
     image: bitnami/postgresql-repmgr:latest
     environment:
       POSTGRESQL_POSTGRES_PASSWORD: BUGRIENKO_216
@@ -9,17 +9,17 @@ services:
       POSTGRESQL_PASSWORD: BUGRIENKO_216
       POSTGRESQL_DATABASE: BUGRIENKO_216
       REPMGR_PASSWORD: repmgrpassword
-      REPMGR_PRIMARY_HOST: postgres-master
-      REPMGR_PARTNER_NODES: postgres-master,postgres-slave
+      REPMGR_PRIMARY_HOST: trains-master
+      REPMGR_PARTNER_NODES: trains-master,trains-slave
       REPMGR_NODE_NAME: node-1
-      REPMGR_NODE_NETWORK_NAME: postgres-master
+      REPMGR_NODE_NETWORK_NAME: trains-master
     ports:
-      - "5432:5432"
+      - "5434:5432"
     volumes:
-      - ./sql:/docker-entrypoint-initdb.d
-      - postgres_master_data:/bitnami/postgresql
+      - ./sql/trains:/docker-entrypoint-initdb.d
+      - trains_master_data:/bitnami/postgresql
 
-  postgres-slave:
+  trains-slave:
     image: bitnami/postgresql-repmgr:latest
     environment:
       POSTGRESQL_POSTGRES_PASSWORD: adminpassword
@@ -27,19 +27,19 @@ services:
       POSTGRESQL_PASSWORD: custompassword
       POSTGRESQL_DATABASE: customdatabase
       REPMGR_PASSWORD: repmgrpassword
-      REPMGR_PRIMARY_HOST: postgres-master
-      REPMGR_PARTNER_NODES: postgres-master,postgres-slave
+      REPMGR_PRIMARY_HOST: trains-master
+      REPMGR_PARTNER_NODES: trains-master,trains-slave
       REPMGR_NODE_NAME: node-2
-      REPMGR_NODE_NETWORK_NAME: postgres-slave
+      REPMGR_NODE_NETWORK_NAME: trains-slave
     ports:
-      - "5433:5432"
+      - "5435:5432"
     depends_on:
-      - postgres-master
+      - trains-master
     volumes:
-      - postgres_slave_data:/bitnami/postgresql
+      - trains_slave_data:/bitnami/postgresql
 
 volumes:
-  postgres_master_data:
+  trains_master_data:
     driver: local
-  postgres_slave_data:
+  trains_slave_data:
     driver: local
